tests/runner-tests/stmt/syntax_errors/1.c
// compile-fail
int f(void) {
 {
    int i;
    while (/) {
     if (1)
            i = 1;
        else
            return v0
    }
